单个岗位删除接口
