# routers/router.go
@@ -58,8 +58,8 @@ func register(router *gin.Engine) {
 		jwt.GET("/post/list", controllers.GetSysPostList)
 		jwt.POST("/post/add", controllers.AddSysPost)
 		jwt.PUT("/post/update", controllers.UpdateSysPost)
-		jwt.GET("/post/info", controllers.GetSysPostDetail)
-		// jwt.DELETE("/post/delete", controller.DeleteSysPostById)
+		jwt.GET("/post/info/{postId}", controllers.GetSysPostDetail)
+		jwt.DELETE("/post/del/{postId}", controllers.DelSysPostById)
 		// jwt.DELETE("/post/batch/delete", controller.BatchDeleteSysPost)
 		// jwt.PUT("/post/updateStatus", controller.UpdateSysPostStatus)
 		// jwt.GET("/post/vo/list", controller.QuerySysPostVoList)
